src/modules/App.css
.App{
    font-family: 'Roboto', sans-serif;
    min-height: 100vh;
    background: rgb(227,53,13);
    background: linear-gradient(122deg, rgba(227,53,13,1) 0%, rgba(49,49,49,1) 62%, rgba(49,49,49,1) 100%);
    background: repeating-linear-gradient(
    315deg,
  #313131,
  #313131 10px,
  #444444 10px,
  #444444 40px
);
  }
  
  .search-form{
    min-height: 10vh;
    display: flex;
    justify-content: center;
    align-items: center;
  }
  
  .search-bar{
    width: 50%;
    border: none;
    padding: 0.73vw;
  }
  
  .search-button{
    background: #E3350D;
    border: none;
    padding: 0.73vw 1.46vw;
    color: white;
    font-weight: bold;
  }
  
  .search-button:hover{
    background: #861d06;
  }
  
  .card-holder{
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;
  }

.error-message{
  position: sticky;
  top: 0em;
  text-align: center;
  color: white;
  margin: 0 3em;
  padding: 0.3em;
  background-color: #cc0000;
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
  cursor: pointer;
}

